# macro

./: .gitignore  .mcp.json  1.7.0  11.json  12.json  13.json  14.json  16.json  3.0.0  5.15.0  5.9.0  9.0.0  AGENT_GUIDE.md  APPLICATION_GUIDE.md  AUTO_ERROR_RECOVERY_GUIDE.md  CHECK_IMPORTS.bat  CHECK_OCR.bat  CHECK_PYTHON.bat  CLEAN_AND_SETUP_PY313.bat  COLLECT_ERRORS.bat  COLLECT_ERRORS_WINDOWS.bat  CURRENT_STATUS.md  CmagmacroRUN_WORKFLOW_TESTS.bat  DIAGNOSE_AND_FIX.bat  DIAGNOSE_AND_FIX_WINDOWS.bat  DRAG_DROP_TEST_GUIDE.md  ERROR_COLLECTION_GUIDE.md  ERROR_FIXES_SUMMARY.md  EXCEL_TAB_IMPROVEMENT_PLAN.md  EXCEL_WORKFLOW_IMPLEMENTATION.md  EXCEL_WORKFLOW_IMPLEMENTATION_REPORT.md  EXCEL_WORKFLOW_TEST_REPORT.md  EXCEL_WORKFLOW_UI_IMPROVEMENT_PLAN.md  Excel_Close_Issue_Analysis.md  FIX_MACRO_WINDOWS.bat  FIX_SETUP.bat  INSTALLER.md  INSTALL_DEPENDENCIES.bat  INSTALL_OCR.bat  INSTALL_PADDLEOCR_VENV.bat  (+172 more)
.claude/: settings.local.json
.vooster/: project.json
DOCS/: EASY_MACRO_DESIGN.md  EASY_MACRO_DESIGN_V2.md  EASY_MACRO_DESIGN_V3.md  EASY_MACRO_IMPLEMENTATION_GUIDE.md  EASY_MACRO_IMPLEMENTATION_V2.md  PADDLEOCR.MD
installer/: ocr_installer.py
src/: __init__.py
test_data/: approval_data.xlsx  create_test_data.py  customer_update.xlsx  healthcare_checkup.xlsx  healthcare_test.xlsx  office_test.xlsx  prescription_data.xlsx
test_results/: drag_drop_test_report.json  test_drag_drop_integration_result.json  test_report_20250716_115250.html  test_step_configuration_result.json
tests/: conftest.py  manual_test_checklist.md  test_helpers.py  test_paddleocr.py  (+7 more)
(+138 files in other folders)
